--- a/src/app/pages/user/courses-registered/courses-registered.component.html
+++ b/src/app/pages/user/courses-registered/courses-registered.component.html
@@ -1,48 +1,76 @@
-<mat-card style="margin-top: 40px;">
-    <h1>Registered Course(s)</h1>
-    <mat-card-content>
-        <div class="bootstrap-wrapper">
-            <div class="row">
-                <div class="col-md-12">
-                    <!-- Loading button -->
-                    <div *ngIf="isLoading" class="text-center">
-                        <button mat-raised-button color="accent"  style="height:50px;">
-                            <mat-icon class="spinner-icon">
-                                <mat-spinner  diameter="40"></mat-spinner>
-                            </mat-icon>
-                            Loading Courses...
-                        </button>
-                    </div>
+<mat-card class="courses-card">
+    <mat-card-header>
+        <mat-card-title class="courses-title">
+            <mat-icon class="header-icon">bookmarks</mat-icon>
+            My Registered Courses
+        </mat-card-title>
+        <mat-card-subtitle *ngIf="!isLoading && userRecords.length > 0">
+            Total: {{ userRecords.length }} course{{ userRecords.length !== 1 ? 's' : '' }}
+        </mat-card-subtitle>
+    </mat-card-header>
 
-                    <div *ngIf="!isLoading">
-                        <div *ngIf="userRecords.length > 0; else elseBlock">
-                            <table class="datatable">
-                                <thead>
-                                    <tr>
-                                        <th>Course Code</th>
-                                        <th>Course Name</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let c of userRecords; let i=index; let odd = odd" 
-                                        [ngClass]="odd ? 'odd_col' : 'even_col'">
-                                        <td>{{ c.category.courseCode}}</td>
-                                        <td>{{ c.category.title }}</td>
-                                        <td>
-                                            <button mat-button (click)="deleteRegCourse(c.rid)" [disabled]="isDeleting">
-                                                <mat-icon color="accent">delete</mat-icon>
-                                                <span *ngIf="isDeleting">Deleting...</span>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <ng-template #elseBlock>You have not registered for any course yet</ng-template>
-                    </div>
-                </div>
+    <mat-card-content>
+        <!-- Loading State -->
+        <div *ngIf="isLoading" class="loading-container">
+            <mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
+            <div class="loading-content">
+                <mat-spinner diameter="40" color="accent"></mat-spinner>
+                <span class="loading-text">Loading your courses...</span>
             </div>
+        </div>
+
+        <!-- Empty State -->
+        <div *ngIf="!isLoading && userRecords.length === 0" class="empty-state">
+            <mat-icon class="empty-icon">assignment</mat-icon>
+            <h3>No Courses Registered</h3>
+            <p>You haven't registered for any courses yet</p>
+        </div>
+
+        <!-- Courses Table -->
+        <div *ngIf="!isLoading && userRecords.length > 0" class="table-container">
+            <table mat-table [dataSource]="userRecords" class="courses-table">
+                <!-- Course Code Column -->
+                <ng-container matColumnDef="courseCode">
+                    <th mat-header-cell *matHeaderCellDef>Course Code</th>
+                    <td mat-cell *matCellDef="let course">
+                        <div class="course-code">
+                            <mat-icon class="code-icon">code</mat-icon>
+                            {{ course.category.courseCode }}
+                        </div>
+                    </td>
+                </ng-container>
+
+                <!-- Course Name Column -->
+                <ng-container matColumnDef="courseName">
+                    <th mat-header-cell *matHeaderCellDef>Course Name</th>
+                    <td mat-cell *matCellDef="let course">
+                        <div class="course-name">
+                            <mat-icon class="name-icon">menu_book</mat-icon>
+                            {{ course.category.title }}
+                        </div>
+                    </td>
+                </ng-container>
+
+                <!-- Action Column -->
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef class="action-header">Action</th>
+                    <td mat-cell *matCellDef="let course" class="action-cell">
+                        <button mat-stroked-button 
+                                color="warn" 
+                                (click)="deleteRegCourse(course.rid)" 
+                                [disabled]="isDeleting"
+                                class="delete-button">
+                            <mat-icon>{{ isDeleting ? 'hourglass_empty' : 'delete' }}</mat-icon>
+                            {{ isDeleting ? 'Removing...' : 'Remove' }}
+                        </button>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="['courseCode', 'courseName', 'action']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['courseCode', 'courseName', 'action'];" 
+                    [class.even-row]="even" 
+                    [class.odd-row]="odd"></tr>
+            </table>
         </div>
     </mat-card-content>
 </mat-card>
